--- a/client/Component/Ui/ModalForLogIn/LogIn/LogIn.css
+++ b/client/Component/Ui/ModalForLogIn/LogIn/LogIn.css
@@ -8,6 +8,13 @@
   border: 1px solid #eee;
   box-shadow: 0 2px 3px #ccc;    
 }
+.LogInCustom button {
+  color: white;
+  background-color:rgb(4, 158, 4);
+}
+.LogInCustom button:hover {
+  background-color: rgb(1, 116, 1);
+}
 .Error {
   color: red;
 }
