add reset password

--- a/client/Component/Ui/ModalForResetPass/ResetPass/ResetPass.css
+++ b/client/Component/Ui/ModalForResetPass/ResetPass/ResetPass.css
@@ -1,4 +1,4 @@
-.ForgotPass {
+.ResetPass {
   flex-grow: 1;
   width: 80%;
   margin: auto;
@@ -11,9 +11,5 @@
 
 .Error {
   color: red;
-
-}
-.Loading {
-  color: green;
 
 }
