add task draggable list

--- a/client/Component/Draggable/MovableItem/MovableItem.css
+++ b/client/Component/Draggable/MovableItem/MovableItem.css
@@ -1,10 +1,10 @@
-.Movable{
+.MovableItem{
   border-radius: 10px;
   background-color: #fff3f3;
-  height: 100px;
+  height: 40px;
   width: 170px;
-  margin: 10px auto;
   display: flex;
+  margin: 10px;
   justify-content: center;
   align-items: center;
   box-shadow: 0px 0px 3px rgba(0,0,0,0.5);
