--- a/client/Component/Draggable/Column/Column.css
+++ b/client/Component/Draggable/Column/Column.css
@@ -1,14 +1,15 @@
 .Column {
   background-color: #f5ffea;
-  padding: 20px;
-  width: 200px;
-  margin: 20px;
+  padding: 30px;
+  width: 250px;
+  margin: 30px;
   border-radius: 10px;
   box-shadow: 1px 1px 6px rgba(0,0,0,0.5);
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  flex-wrap: wrap;
 }
+
 
 .ColumnSecond {
   background-color: #529c03;
