--- a/client/Component/Draggable/MovableItem/Item/Item.css
+++ b/client/Component/Draggable/MovableItem/Item/Item.css
@@ -11,6 +11,10 @@
   box-shadow: 0px 0px 3px rgba(0,0,0,0.5);
 }
 
+.ItemSecondColimn {
+  background-color: rgb(13, 180, 13);
+}
+
 
 .Item button {
   color: rgb(223, 0, 0);
@@ -19,4 +23,11 @@
 .Item H2 {
   width: 140px;
   cursor: pointer;
+}
+
+.StatusBar  {
+  border-radius: 5px;
+  width: 30px;
+  height: 20px;
+  background-color: blue;
 }
